add actions queue